--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,18 @@ services:
     web:
         build: ./web
         volumes:
-            - ./web:/code
+          - ./web:/code
         ports:
-            - "80:5000"
-        links:
-            - redis:redis
+          - "80:5000"
+        depends_on:
+          - redis
         command: python app.py
     redis:
         image: redis:5.0.4
         ports:
-            - "6379:6379"
+          - "6379:6379"
         volumes:
-            - db-data:/data
+          - db-data:/data
 
 volumes:
     db-data:
