--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,60 +1,21 @@
-version: 2
+version: 2.1
+
+orbs:
+  python: circleci/python@0.2.1
+
 jobs:
-  build:
-    docker:
-      - image: circleci/python:3.7.3
-
-    working_directory: ~/repo
-
+  build-and-test:
+    executor: python/default
     steps:
       - checkout
-
-      - setup_remote_docker:
-          # docker_layer_caching: true
-          version: 18.06.0-ce
-      
+      - python/load-cache
+      - python/install-deps
+      - python/save-cache
       - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            sudo mv /tmp/docker/* /usr/bin
+          command: ./manage.py test
+          name: Test
 
-      - run:
-          name: run tests
-          command: |
-            docker image build -t fitter-happier-docker web
-            docker container run -d fitter-happier-docker python -m unittest discover web
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
-
-  publish-image:
-    machine: true
-    steps:
-      - checkout
-
-      - deploy:
-          name: Publish application to Docker Hub
-          command: |
-            docker login -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
-            docker image build -t fitter-happier-docker web
-            docker tag fitter-happier-docker $DOCKER_HUB_USER_ID/fitter-happier-docker:$CIRCLE_SHA1
-            docker tag fitter-happier-docker $DOCKER_HUB_USER_ID/fitter-happier-docker:latest
-            docker push $DOCKER_HUB_USER_ID/fitter-happier-docker:$CIRCLE_SHA1
-            docker push $DOCKER_HUB_USER_ID/fitter-happier-docker:latest
-         
 workflows:
-  version: 2
-  build-master:
+  main:
     jobs:
-      - build
-      - publish-image:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+      - build-and-test
