Breaking the build :-)

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,14 +1,17 @@
 # start with a base image
 FROM python:3.7
 
-# update pip
+# we use the latest version to avoid issues
 RUN python -m pip install --upgrade pip
 
-# set working diretory
+# all subsequent commands will use this as the default directory
 WORKDIR /code
 
-# copy requirements.txt and install
+# project dependencies change less often than source code,
+# hence the desire to copy `requirements.txt` separately in its own layer
 COPY requirements.txt requirements.txt
+
+# install project dependencies
 RUN python -m pip install -r requirements.txt
 
 # copy all project files
