--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,6 @@ jobs:
       - setup_remote_docker:
           version: 18.06.0-ce
       
-      # - run:
-      #     name: Install Docker client
-      #     command: |
-      #       set -x
-      #       VER="17.03.0-ce"
-      #       curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-      #       sudo mv /tmp/docker/* /usr/bin
-
       - run:
           name: run tests
           command: |
@@ -34,6 +25,9 @@ jobs:
   publish-image:
     docker:
       - image: cimg/base:2020.01
+        auth:
+          username: $DOCKER_HUB_USER_ID
+          password: $DOCKER_HUB_PWD
 
     steps:
       - checkout
@@ -44,15 +38,16 @@ jobs:
       - deploy:
           name: Publish application to Docker Hub
           command: |
-            echo "$DOCKER_HUB_PWD" | docker login --username $DOCKER_HUB_USER_ID --password-stdin
             docker image build -t fitter-happier-docker web
             docker tag fitter-happier-docker $DOCKER_HUB_USER_ID/fitter-happier-docker:$CIRCLE_SHA1
             docker tag fitter-happier-docker $DOCKER_HUB_USER_ID/fitter-happier-docker:latest
             docker push $DOCKER_HUB_USER_ID/fitter-happier-docker:$CIRCLE_SHA1
             docker push $DOCKER_HUB_USER_ID/fitter-happier-docker:latest
-         
+
+# orchestrate or schedule a set of jobs
 workflows:
   version: 2
+  # name the workflow "build-master" (a bit of a misnomer, because it does NOT just build on master)
   build-master:
     jobs:
       - build
@@ -60,5 +55,6 @@ workflows:
           requires:
             - build
           filters:
+            # publishing an image only happens when we're on master
             branches:
               only: master
